--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="leftall">
           <nav>
             <a href="home.html">
-              <img src="/images/logo.webp" alt="twitter-logo" class="twitter leftallpd" /></a>
+              <img src="./images/logo.webp" alt="twitter-logo" class="twitter leftallpd" /></a>
 
             <ul class="leftallpd">
               <div class="tabs">
