--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="leftall">
           <nav>
             <a href="home.html">
-              <img src="./images/logo.webp" alt="twitter-logo" class="twitter leftallpd" /></a>
+              <img src="/images/logo.webp" alt="twitter-logo" class="twitter leftallpd" /></a>
 
             <ul class="leftallpd">
               <div class="tabs">
@@ -160,14 +160,15 @@
           </nav>
         </div>
       </div>
-      <div class="vline"></div>
+      <div class="border"></div>
+      <!-- #CENTER PART -->
       <div class="centre">
         <div class="centreall">
           <div class="home">
             <a href="home.html" class="linkstyle">Home</a>
             <a href="toptweet.html"></a>
           </div>
-          <div class="hline"></div>
+          <div class="topBorder"></div>
         </div>
         <div class="writetweet">
           <div class="profileimgcentre">
@@ -179,25 +180,34 @@
           </div>
           <div class="tweetpost">Tweet</div>
         </div>
-        <div class="htline"></div>
-        <div class="person2 otheruser">
-          <div class="userdetails">
-            <div class="otherpropic space-in-word-of-tweet">
-              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkbv0njUzre_8KPpsUtxYlogJduou5LK2I0w&usqp=CAU" alt="img" class="otherimg" />
+        <div class="bottomBorder"></div>
+
+        <!-- #---------------MAIN POSTS -->
+        
+        <div class="person3 otheruser">
+          <!-- <div class="flex postHeading">
+            <div class="userdetails">
+              <div class="otherpropic space-in-word-of-tweet">
+                <img src="https://source.unsplash.com/45x45/?boy" alt="img" class="otherimg" />
+              </div>
+              <div class="otherusername space-in-word-of-tweet">Shaggy</div>
+              <div class="otherusertag space-in-word-of-tweet">@Shaggy</div>
+              <div class="uplodetime space-in-word-of-tweet">17m</div>
             </div>
-            <div class="otherusername space-in-word-of-tweet">Hrithik Roshan</div>
-            <div class="otherusertag space-in-word-of-tweet">@hrithikroshan</div>
-            <div class="uplodetime space-in-word-of-tweet">11m</div>
+            <div class="flex">
+              <button data-id=${tweet._id} class="tweet-edit" id="tweet-edit">
+                Edit
+              </button>
+              <button data-id=${tweet._id} class="tweet-delete" id="tweet-delete">
+                Delete
+              </button>
+            </div>
           </div>
-  
-          <div class="usercontent">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Necessitatibus reprehenderit similique numquam maiores! Nemo,
-            alias placeat. Unde ratione quasi, eaque molestias quo sunt autem
-            corrupti neque eligendi, alias ad quas!
+          <div class="usercontent id=span-${tweet._id}">
+            ${tweet.title}
           </div>
           <div class="userupimage">
-            <img src="https://img.fresherslive.com/entertainment/images/photos/origin/2020/05/05/hrithik-roshan-5eb1252279293-1588667682.jpg" alt="img" class="givenimage" />
+            <img src="https://source.unsplash.com/480x360/?fruit" alt="img" class="givenimage" />
           </div>
           <div class="usertweetoptions">
             <div class="replybox">
@@ -208,7 +218,7 @@
                   d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"
                   class="reply" />
               </svg>
-              <div class="replycount">117</div>
+              <div class="replycount">107</div>
             </div>
             <div class="replybox">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
@@ -219,7 +229,7 @@
                 <polyline points="7 23 3 19 7 15"></polyline>
                 <path d="M21 13v2a4 4 0 0 1-4 4H3" class="retgreen"></path>
               </svg>
-              <div class="tweetcount">187</div>
+              <div class="tweetcount">203</div>
             </div>
             <div class="replybox">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -229,7 +239,7 @@
                   d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"
                   class="heartred"></path>
               </svg>
-              <div class="heartcount">7.9k</div>
+              <div class="heartcount">1.3k</div>
             </div>
             <div class="replybox">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
@@ -242,8 +252,9 @@
             </div>
           </div>
         </div>
-        <div class="htline"></div>
-        <div class="person3 otheruser">
+        <div class="bottomBorder"></div> -->
+
+        <!-- <div class="person3 otheruser">
           <div class="userdetails">
             <div class="otherpropic space-in-word-of-tweet">
               <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSdzClKCt5b-ARpJqqng24mo3urNkADCjWAfA&usqp=CAU" alt="img" class="otherimg" />
@@ -307,7 +318,8 @@
             </div>
           </div>
         </div>
-        <div class="htline"></div>
+        <div class="bottomBorder"></div>
+
         <div class="person4 otheruser">
           <div class="userdetails">
             <div class="otherpropic space-in-word-of-tweet">
@@ -372,9 +384,11 @@
             </div>
           </div>
         </div>
-        <div class="htline"></div>
+        <div class="bottomBorder"></div> -->
       </div>
-      <div class="vline"></div>
+      </div>
+      <!-- #RIGHT ASIDE -->
+      <div class="border"></div>
       <div class="right">
         <div class="searchtwitter">
           <div class="search">
@@ -390,41 +404,41 @@
         <div class="whatsHappiningContainer">
           <div class="whatsHappining">
             <h3 class="trending">What's happining</h3>
-            <div class="hline"></div>
+            <div class="topBorder"></div>
             <div class="trending trendingbox">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta,
               est?
             </div>
-            <div class="hline"></div>
+            <div class="topBorder"></div>
             <div class="trending trendingbox">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
               quisquam commodi?
             </div>
-            <div class="hline"></div>
+            <div class="topBorder"></div>
             <div class="trending trendingbox">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam
               quidem at, quis, optio sint dignissimos dolor soluta ex, modi
               ipsam recusandae reprehenderit?
             </div>
-            <div class="hline"></div>
+            <div class="topBorder"></div>
             <div class="trending trendingbox">
               Lorem ipsum dolor sit amet.
             </div>
-            <div class="hline"></div>
+            <div class="topBorder"></div>
             <div class="trending trendingbox">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
               corrupti ea est. Quam, illum molestiae. Delectus esse quas in id
               numquam quae mollitia aliquid iure reiciendis! At porro ut
               quaerat.
             </div>
-            <div class="hline"></div>
+            <div class="topBorder"></div>
             <div class="showmore trending trendingbox">Show More</div>
           </div>
         </div>
         <div class="whoToFollow">
           <div class="boxWhoToFollow">
             <h2 class="headlineWhoToFollow"><b>Who to follow</b></h2>
-            <div class="hline"></div>
+            <div class="topBorder"></div>
             <div class="toFollowOne toFollow">
               <div class="toFollowLeft">
                 <div class="toFollowProfileimg">
@@ -450,7 +464,7 @@
                 <div class="toFollowButton">Follow</div>
               </div>
             </div>
-            <div class="hline"></div>
+            <div class="topBorder"></div>
             <div class="toFollowTwo toFollow">
               <div class="toFollowLeft">
                 <div class="toFollowProfileimg">
@@ -477,7 +491,7 @@
                 <div class="toFollowButton">Follow</div>
               </div>
             </div>
-            <div class="hline"></div>
+            <div class="topBorder"></div>
             <div class="toFollowThree toFollow">
               <div class="toFollowLeft">
                 <div class="toFollowProfileimg">
@@ -506,7 +520,7 @@
           </div>
         </div>
         <div class="copyright">
-          <!-- <div class="hline"></div> -->
+          <!-- <div class="topBorder"></div> -->
           <div class="termsser">
             <p>Terms of services</p>
             <p>Privacy Policies</p>
@@ -522,5 +536,7 @@
     </div>
   </main>
   <footer></footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
