js added for edit and delete

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               class="pimgcentre" />
           </div>
           <div class="wtweet">
-            <input type="text" name="" id="" class="witweet" placeholder="What's happening?" />
+            <input type="text" name="" id="" class="tweet-post-text" placeholder="What's happening?" />
           </div>
           <div class="tweetpost">Tweet</div>
         </div>
